--- a/UWP-App/UWP-App/UWP-App.csproj
+++ b/UWP-App/UWP-App/UWP-App.csproj
@@ -97,10 +97,25 @@
     </Compile>
     <Compile Include="Common\NavigationService.cs" />
     <Compile Include="Common\RelayCommand.cs" />
+    <Compile Include="Converter\BoolToColorConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Andelshaver.cs" />
+    <Compile Include="Model\Enums\StatusRapportTypes.cs" />
+    <Compile Include="Model\Enums\StatusValues.cs" />
+    <Compile Include="Model\Faldstamme.cs" />
+    <Compile Include="Model\Kontrakt.cs" />
+    <Compile Include="Model\Lejlighed.cs" />
+    <Compile Include="Model\Interface\ICanBeReportedOn.cs" />
+    <Compile Include="Model\StatusRapport\StatusRapportBase.cs" />
+    <Compile Include="Model\StatusRapport\StatusRapportFaldstamme.cs" />
+    <Compile Include="Model\StatusRapport\StatusRapportVindue.cs" />
+    <Compile Include="Model\Vindue.cs" />
+    <Compile Include="Persistency\Interface\IPersistency.cs" />
+    <Compile Include="Persistency\TempTestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\LejlighedViewModel.cs" />
     <Compile Include="ViewModel\ShellPageViewModel.cs" />
     <Compile Include="Common\ObservableBase.cs" />
     <Compile Include="View\LejlighedPage.xaml.cs">
@@ -159,6 +174,7 @@
       <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
