--- a/UWP-App/UWP-App/UWP-App.csproj
+++ b/UWP-App/UWP-App/UWP-App.csproj
@@ -92,15 +92,14 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ActivationService.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common\NavigationService.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Converter\BoolToColorConverter.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Handler\StatusRapportHandler.cs" />
     <Compile Include="Model\Andelshaver.cs" />
     <Compile Include="Model\Enums\StatusRapportTypes.cs" />
     <Compile Include="Model\Enums\StatusValues.cs" />
@@ -118,6 +117,9 @@
     <Compile Include="ViewModel\LejlighedViewModel.cs" />
     <Compile Include="ViewModel\ShellPageViewModel.cs" />
     <Compile Include="Common\ObservableBase.cs" />
+    <Compile Include="View\HomePage.xaml.cs">
+      <DependentUpon>HomePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LejlighedPage.xaml.cs">
       <DependentUpon>LejlighedPage.xaml</DependentUpon>
     </Compile>
@@ -149,9 +151,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="View\HomePage.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\LejlighedPage.xaml">
       <SubType>Designer</SubType>
