--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,5 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+MainAppWindows/MainAppWindows/obj/x86/Debug/MainAppWindows.csproj.CoreCompileInputs.cache
+MainAppWindows/.vs/MainAppWindows/v15/.suo
