--- a/UWP-App/UWP-App/UWP-App.csproj
+++ b/UWP-App/UWP-App/UWP-App.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Model\Vindue.cs" />
     <Compile Include="Persistency\Interface\ICreatePersistency.cs" />
     <Compile Include="Persistency\Interface\IRetrievePersistency.cs" />
+    <Compile Include="Persistency\PersistencyFacade.cs" />
     <Compile Include="Persistency\TempTestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\LejlighedViewModel.cs" />
@@ -171,11 +172,17 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client">
+      <Version>5.2.6</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
