Cleaned up code and fixed bug that prevented the system from starting

--- a/UWP-App/UWP-App/UWP-App.csproj
+++ b/UWP-App/UWP-App/UWP-App.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Model\StatusRapport\StatusRapportVindue.cs" />
     <Compile Include="Model\Vindue.cs" />
     <Compile Include="Persistency\Interface\ICreatePersistency.cs" />
+    <Compile Include="Persistency\Interface\IPersistency.cs" />
     <Compile Include="Persistency\Interface\IRetrievePersistency.cs" />
     <Compile Include="Persistency\PersistencyFacade.cs" />
     <Compile Include="Persistency\TempTestData.cs" />
