Added controllers for faldstammer and vinduer
Also changed the lejlighedsRapportView in the db

--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -130,7 +130,9 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -171,6 +173,7 @@
     <Compile Include="Controllers\ListAndelshaversLejlighederViewsController.cs" />
     <Compile Include="Controllers\ListLejlighedersRaporterViewsController.cs" />
     <Compile Include="Controllers\Status_RaportController.cs" />
+    <Compile Include="Controllers\VindueController.cs" />
     <Compile Include="Converter\RaportJsonConverter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -248,6 +251,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\tmp\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
